--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a>４は記憶を失った状態でドラゴンの上に落ちる</a>
   <a>Ｆは１の続編のようなもの</a>
   <a>Ｏはルーンファクトリーとして認めてないので割愛。<div class="fontred">畑耕してからこい</div></a>
-  <h3>ルーンファクトリーのヒロインたち（ピックアップ）</3h>
+  <h3>ルーンファクトリーのヒロインたち（ピックアップ）</h3>
   <a>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</a>
   <a>メインヒロインがいない作品がOと4のため、女主人公を掲載</a>
   <table>
