--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <h1 class="aquafont">よ　う　こ　そ</h1>
   
   <h2>ルーンファクトリーについて</h2>
-  <a>私の最も好きなゲームシリーズ</a>
-  <a>１　２　Ｆ　３　Ｏ　４（発売日順）の６作品出ている</a>
-  <a>１，２，３は記憶喪失の状態でメインヒロインの家の前で倒れるところから始まる</a>
-  <a>４は記憶を失った状態でドラゴンの上に落ちる</a>
-  <a>Ｆは１の続編のようなもの</a>
-  <a>Ｏはルーンファクトリーとして認めてないので割愛。<div class="fontred">畑耕してからこい</div></a>
+  <p>私の最も好きなゲームシリーズ</p>
+  <p>１　２　Ｆ　３　Ｏ　４（発売日順）の６作品出ている</p>
+  <p>１，２，３は記憶喪失の状態でメインヒロインの家の前で倒れるところから始まる</p>
+  <p>４は記憶を失った状態でドラゴンの上に落ちる</p>
+  <p>Ｆは１の続編のようなもの</p>
+  <p>Ｏはルーンファクトリーとして認めてないので割愛。<div class="fontred">畑耕してからこい</div></p>
   <h3>ルーンファクトリーのヒロインたち（ピックアップ）</h3>
-  <a>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</a>
-  <a>メインヒロインがいない作品がOと4のため、女主人公を掲載</a>
+  <p>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</p>
+  <p>メインヒロインがいない作品がOと4のため、女主人公を掲載</p>
   <table>
    <tr><th>タイトル</th><th>メインヒロイン</th><th>サブ</th><th>サブ</th><th>サブ</th></tr>
   <tr><td>1</td><td>ミスト</td><td>ロゼッタ</td><td>メロディ</td><<td>フィル</td>/tr>
