--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h3>ルーンファクトリーのヒロインたち（ピックアップ）</h3>
   <p>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</p>
   <p>メインヒロインがいない作品がOと4のため、女主人公を掲載</p>
-  <table>
+  <table border=1>
    <tr><th>タイトル</th><th>メインヒロイン</th><th>サブ</th><th>サブ</th><th>サブ</th></tr>
   <tr><td>1</td><td>ミスト</td><td>ロゼッタ</td><td>メロディ</td><<td>フィル</td>/tr>
   <tr><td>2</td><td>マナ</td><td>ドロシー</td><td>セシリア</td><td>ユエ</td></tr>
