--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>１，２，３は記憶喪失の状態でメインヒロインの家の前で倒れるところから始まる</p>
   <p>４は記憶を失った状態でドラゴンの上に落ちる</p>
   <p>Ｆは１の続編のようなもの</p>
-  <p>Ｏはルーンファクトリーとして認めてないので割愛。<div class="fontred">畑耕してからこい</div></p>
+  <p>Ｏはルーンファクトリーとして認めてないので割愛。<div class="redfont">畑耕してからこい</div></p>
   <h3>ルーンファクトリーのヒロインたち（ピックアップ）</h3>
   <p>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</p>
   <p>メインヒロインがいない作品がOと4のため、女主人公を掲載</p>
