--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <p>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</p>
   <p>メインヒロインがいない作品がOと4のため、女主人公を掲載</p>
   <table border=1>
+    <thead>
    <tr><th>タイトル</th><th>メインヒロイン</th><th>サブ</th><th>サブ</th><th>サブ</th></tr>
+    </thead>
   <tr><td>1</td><td>ミスト</td><td>ロゼッタ</td><td>メロディ</td><<td>フィル</td>/tr>
   <tr><td>2</td><td>マナ</td><td>ドロシー</td><td>セシリア</td><td>ユエ</td></tr>
   <tr><td>F</td><td>ミスト</td><td>セルフィ</td><td>エリス（黒）</td><td>ドロップ</td></tr>
