--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="ja">
 <head>
+  
 <title>web1</title>
   <link rel="stylesheet" type="text/css" href="cs.css">
 </head>
@@ -19,7 +20,7 @@
   <h3>ルーンファクトリーのヒロインたち（ピックアップ）</h3>
   <p>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</p>
   <p>メインヒロインがいない作品がOと4のため、女主人公を掲載</p>
-  <tr>
+  
   <table border=1>
     <thead>
    <tr><th>タイトル</th><th>メインヒロイン</th><th>サブ</th><th>サブ</th><th>サブ</th></tr>
