--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <thead>
    <tr><th>タイトル</th><th>メインヒロイン</th><th>サブ</th><th>サブ</th><th>サブ</th></tr>
     </thead>
-  <tr><td>1</td><td>ミスト</td><td>ロゼッタ</td><td>メロディ</td><td>フィル</td>/tr>
+  <tr><td>1</td><td>ミスト</td><td>ロゼッタ</td><td>メロディ</td><td>フィル</td></tr>
   <tr><td>2</td><td>マナ</td><td>ドロシー</td><td>セシリア</td><td>ユエ</td></tr>
   <tr><td>F</td><td>ミスト</td><td>セルフィ</td><td>エリス（黒）</td><td>ドロップ</td></tr>
   <tr><td>3</td><td>シア</td><td>カリン</td><td>ソフィア</td><td>さくや</td></tr>
