--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="ja">
 <head>
   
@@ -32,5 +32,29 @@
   <tr><td>O</td><td>ソニア</td><td>アイリス</td><td>オデット</td><td>エレナ</td></tr>
   <tr><td>4</td><td>フレイ</td><td>ドルチェ＆ピコ</td><td>フォルテ</td><td>マーガレット</td></tr>
   </table>
-</body>
+  
+  <h3>さらにピックアップ</h3>
+  <h4>ミスト</h4>
+  <ul type="square">
+    <li>ルーンファクトリーといえばこの方</li>
+    <li>カブが好き</li>
+    <li>主人公が苦労して攻略したダンジョンの最深部まで軽々とくる</li>
+    <li>Fでカブ座をみつけるとカブメテオが降ってくる</li>
+    <li>でも大好物は金剛花で、カブは２番目</li>
+  </ul>
+  <h4>フィル</h4>
+  <ul type="square">
+    <li>村長の娘</li>
+    <li>アキネイターでも言い当てられなかったかわいそうな人</li>
+    
+  </ul>
+  <h4>セシリア</h4>
+  <ul type="square">
+  <li>１で子供の姿で出てくる</li>
+    <li>ハーフエルフ</li>
+    <li>めっかわ。ただし人気投票では４位</li>
+  </ul>
+  
+  <h4>
+    </body>
 </html>
