--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <p>４は記憶を失った状態でドラゴンの上に落ちる</p>
   <p>Ｆは１の続編のようなもの</p>
   <p>Ｏはルーンファクトリーとして認めてないので割愛。<span class="redfont">畑耕してからこい</span></p>
+  <p>開発元であるネバーランドカンパニーが倒産したため続編が出ない可能性がある</p>
+  
   <h3>ルーンファクトリーのヒロインたち（ピックアップ）</h3>
   <p>１作品当たりヒロインが１０人ほどいるのでピックアップ。Ｏと４にはヒーローがいる</p>
   <p>メインヒロインがいない作品がOと4のため、女主人公を掲載</p>
@@ -55,6 +57,12 @@
     <li>めっかわ。ただし人気投票では４位</li>
   </ul>
   
-  <h4>
+  <h4>エリス（黒）</h4>
+  <ul type="square">
+ <li>フロンティアに出てくるエリスの黒いほう</li>
+    <li>白いほうもいる。声は白いほうが高いが、髪は黒いほうが長い</li>
+    <li>フロンティアをやるときは黒か白を選ぶ必要が出てくる</li>
+    <li>白とともに多くのプレイヤーを泣かせたキャラ</li>
+  </ul>
     </body>
 </html>
