--- a/index.html
+++ b/index.html
@@ -64,5 +64,22 @@
     <li>フロンティアをやるときは黒か白を選ぶ必要が出てくる</li>
     <li>白とともに多くのプレイヤーを泣かせたキャラ</li>
   </ul>
+  
+  
+  <form id="ank" action="#" method="post">
+    <p>あなたの一押しヒロインは？</p>
+<p><input type="radio" name="input" value="mist" checked>ミスト
+<input type="radio" name="input" value="mist">ミスト
+<input type="radio" name="input" value="mist">ミスト
+    <input type="radio" name="input" value="mist">ミスト</p>
+<p><input type="radio" name="input" value="mist">ミスト
+<input type="radio" name="input" value="mist">ミスト
+<input type="radio" name="input" value="mist">ミスト
+<input type="radio" name="input" value="mist">ミスト
+  <input type="radio" name="input" value="mist">ミスト</p>
+      <p><input type="submit" value="送信">
+<input type="reset" value="取り消し"></p>
+
+  </form>
     </body>
 </html>
