--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <h2>ルーンファクトリーについて</h2>
   <p>私の最も好きなゲームシリーズ</p>
-  <p>１　２　Ｆ　３　Ｏ　４（発売日順）の６作品出ている</p>
+  <p><a href="http://www.bokumono.com/series/runefactory/" target="_blank">１</a>　２　Ｆ　３　Ｏ　４（発売日順）の６作品出ている</p>
   <p>１，２，３は記憶喪失の状態でメインヒロインの家の前で倒れるところから始まる</p>
   <p>４は記憶を失った状態でドラゴンの上に落ちる</p>
   <p>Ｆは１の続編のようなもの</p>
